fix: bug and implement validation
